--- a/portfolio.html
+++ b/portfolio.html
@@ -39,8 +39,8 @@
             <div class="content">
                 <h3>FreeGames</h3>
                 <p>REACTJS,CSS,REACTJS COMPONENTS,API</p>
-                <a href="https://sharp-jennings-f6a04e.netlify.app ">code source</a>
-                <a href="https://github.com/ledemkam/Free2Game">website</a>
+                 <a href="https://github.com/ledemkam/Free2Game">code source</a>
+                <a href="https://sharp-jennings-f6a04e.netlify.app ">website</a>
             </div>
         </div>
 
