--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,7 @@
         </div>
         
             <div class="box">
-            <img src="assets/img/restauration.png" alt="">
+            <img src="assets/img/praxismedezin.png" alt="">
             <div class="content">
                 <h3>Restaurant</h3>
                 <p>HTML,CSS,Javascript</p>
