--- a/home.html
+++ b/home.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="content">
-        <h3>Hallo, meim name ist Eric</h3>
+        <h3>Hallo, mein name ist Eric</h3>
         <span>ich bin junior Full stack Developer</span>
         <p>Ich liebe es zu programmieren und lerne gerne neue Sprachen.</p>
         <p> “Code is read more than it is written.” </p>
