--- a/portfolio.html
+++ b/portfolio.html
@@ -119,12 +119,12 @@
         </div>
 
         <div class="box">
-            <img src="assets/img/fitness-studio.png" alt="">
+            <img src="assets/img/tailwindcss.png" alt="">
             <div class="content">
-                <h3>fitness-studio</h3>
-                <p>HTML,CSS,JAVASCRIPT</p>
-                <a href="https://github.com/ledemkam/Fitnessstudio">code source</a>
-                <a href="https://fitnessstudio.vercel.app/">WEBSITE</a>
+                <h3>klein firma</h3>
+                <p>HTML,CSS,TAILWINDCSS</p>
+                <a href="hhttps://github.com/ledemkam/IntrototailwindCSS">code source</a>
+                <a href="intrototailwind-css.vercel.app">WEBSITE</a>
 
             </div>
         </div>
