--- a/portfolio.html
+++ b/portfolio.html
@@ -124,7 +124,7 @@
                 <h3>klein firma</h3>
                 <p>HTML,CSS,TAILWINDCSS</p>
                 <a href="hhttps://github.com/ledemkam/IntrototailwindCSS">code source</a>
-                <a href="intrototailwind-css.vercel.app">WEBSITE</a>
+                <a href="https://intrototailwind-css.vercel.app/">WEBSITE</a>
 
             </div>
         </div>
