--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 
             </div>
 
-            <a href="assets/img/Eric kamdem Lebenslauf-komprimiert.pdf" class="btn"> download CV <i class="fas fa-download"></i> </a>
+            <a href="assets/img/Lebenslaufkamdem.pdf" class="btn"> download CV <i class="fas fa-download"></i> </a>
 
         </div>
 
