--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
 
     <div class="content">
         <h3>Hallo, mein name ist Eric</h3>
-        <span>ich bin junior Full stack Developer</span>
+        <span>ich bin Software-Developer</span>
         <p>Ich liebe es zu programmieren und lerne gerne neue Sprachen.</p>
         <p> “Code is read more than it is written.” </p>
         <a href="about.html" class="btn"> über mich <i class="fas fa-user"></i> </a>
