--- a/about.html
+++ b/about.html
@@ -143,6 +143,10 @@
             <img src="assets/img/vscode.png">
             <h3>Vscode</h3>
         </div>
+          <div class="box">
+            <img src="assets/img/material-ui.png">
+            <h3>Material-UI</h3>
+        </div>
         
     </div>
 
