--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                 </div>
     
                 <div class="box">
-                    <h3> <span>skill : </span> Junior Webentwickler</h3>
+                    <h3> <span>skill : </span> Software-Developer</h3>
                   
                     <h3> <span>language : </span> Deutsch, english, Französich </h3>
                 </div>
